Gmail Script added

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,15 @@
     "author":"osrbck",
     "action":{
         "default_popup":"index.html"
-    }
+    },
+
+    "content_scripts":[
+        {
+            "matches": ["https://mail.google.com/*"],
+            "js":["gmail-script.js"]
+        }
+    ],
+    "host_permissions":[
+        "https://mail.google.com/*"
+    ]
 }
