--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "GPTLLE",
+    "name": "GMPT",
     "version":"1.0.0",
     "description":"GPT Extention",
     "manifest_version":3,
