Service Worker created

--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,11 @@
             "js":["gmail-script.js"]
         }
     ],
+    
+    "background":{
+        "service_worker": "background.js"
+    },
+
     "host_permissions":[
         "https://mail.google.com/*"
     ]
